iai-callgrind/tests/ui/test_library_benchmark_invalid_bench_arguments_key_value.rs
use iai_callgrind::library_benchmark;

#[library_benchmark]
#[bench::id(invalid = "value")]
pub fn bench0() {}

#[library_benchmark]
#[bench::id(args = "value")]
pub fn bench1() {}

fn main() {}
